# ftxpy

./: Batchscript.py  FTXInput.py  FTXOutput.py  FTXParameter.py  FTXRun.py  FTXSimulation.py  LICENSE  README.md  __init__.py  batchscript.sh  brol.diff  brol.ipynb  d_17_n_2048  d_19_n_2048  defaults.py  log.diff  pyproject.toml  utils.py
config/: config.cori.toml  config.perlmutter.toml  perlmutter.yaml
examples/: bursting_perlmutter_13_16.py  bursting_perlmutter_17_20.py  bursting_perlmutter_1_4.py  bursting_perlmutter_5_8.py  bursting_perlmutter_9_12.py  convergence.py  convergence_test.py  exploration.py  gsa.sh  gsa_1_perlmutter.py  gsa_2_perlmutter.py  gsa_3_perlmutter.py  parameter_study.py  parameter_study_perlmutter.py
examples-old/: convergence_test.py  convergence_test_low_burst.py  convergence_test_low_burst_start_stop.py  convergence_test_low_burst_start_stop_2.py  convergence_test_low_burst_start_stop_3.py  convergence_test_low_burst_start_stop_4.py  convergence_test_low_burst_start_stop_5.py  convergence_test_low_burst_start_stop_6.py  convergence_test_low_burst_start_stop_7.py  convergence_test_low_burst_start_stop_8.py  convergence_test_petsc.py  parameter_study.py  start_stop_test_final_time.py  start_stop_test_stepover.py
src/ftxpy/: __init__.py  batchscript.py  group.py  input.py  output.py  parameter.py  run.py  (+2 more)
tests/: test_PISCES_cori.py  test_PISCES_cori2.py  test_PISCES_cori_keepLastTS_fix_bad.py  test_PISCES_cori_keepLastTS_fix_good.py  test_PISCES_perlmutter.py  test_multiple_ips_cori.py  test_postprocess_cori.py  test_random_cori.py
(+4 files in other folders)
