[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftxpy"
version = "0.0.1"
authors = [
  { name="Pieterjan Robbe", email="pmrobbe@sandia.gov" },
]
description = "A wrapper for FTX using IPS"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
keywords = ["Xolotl", "F-Tridyn", "IPS"]
dependencies = [
  "toml",
  "pyslurm"
]

[project.urls]
"Source" = "https://github.com/PieterjanRobbe/FTXpy"